--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,14 @@ version: '3'
 
 services:
   node:
-    image: node:10.16.3
+    build: .
     volumes:
-      - "./:/var/www"
+      - ".:/app"
     ports:
       - "8081:3000"
     links:
       - mongo
-    command: bash -c "cd /var/www && ./node_modules/.bin/pm2 start startup.json --name API --no-daemon"
+    command: bash -c "cd /app && ./node_modules/.bin/pm2 start startup.json --name API --no-daemon"
     environment:
       - URL_MONGO=mongodb://api:docker1234@mongo
 
