--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node server/www.js",
     "watch": "encore dev --watch",
-    "seed": "node ./seed/seeder.js"
+    "seed": "node ./seed/seeder.js",
+    "build-dev": "encore dev"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "file-loader": "^6.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.14",
     "mongoose-unique-validator": "^2.0.3",
@@ -23,7 +26,9 @@
     "react": "^17.0.2",
     "react-admin": "^3.16.3",
     "react-dom": "^17.0.2",
-    "twig": "^1.15.4"
+    "twig": "^1.15.4",
+    "webpack-node-externals": "^3.0.0",
+    "webpack-shell-plugin-next": "^2.2.2"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.14.5",
