--- a/package.json
+++ b/package.json
@@ -33,10 +33,19 @@
   "devDependencies": {
     "@babel/preset-react": "^7.14.5",
     "@symfony/webpack-encore": "^1.5.0",
+    "@typescript-eslint/eslint-plugin": "^4.31.1",
+    "@typescript-eslint/parser": "^4.31.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.25.1",
+    "prettier": "^2.4.0",
+    "typescript": "^4.4.3",
     "webpack-notifier": "^1.13.0"
   }
 }
