--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - "8081:3000"
     links:
       - mongo
-    command: bash -c "cd /app && yarn build-dev && ./node_modules/.bin/pm2 start startup.json --name API --no-daemon"
+    command: bash -c "cd /app && ./node_modules/.bin/pm2 start startup.json --name API --no-daemon"
     environment:
       - URL_MONGO=mongodb://api:docker1234@mongo
 
