--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node server/www.js",
-    "watch": "encore dev --watch",
+    "watch": "webpack --config webpack.config.js --watch",
     "seed": "node ./build/seeder.bundle.js",
-    "build-dev": "encore dev"
+    "build-dev": "webpack --config webpack.config.js"
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
@@ -31,8 +30,10 @@
     "webpack-shell-plugin-next": "^2.2.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.15.4",
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
-    "@symfony/webpack-encore": "^1.5.0",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
     "babel-core": "^6.26.3",
@@ -46,6 +47,8 @@
     "eslint-plugin-react": "^7.25.1",
     "prettier": "^2.4.0",
     "typescript": "^4.4.3",
+    "webpack": "^5.52.1",
+    "webpack-cli": "^4.8.0",
     "webpack-notifier": "^1.13.0"
   }
 }
