--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,12 @@ services:
       - mongo
     command: bash -c "cd /app && ./node_modules/.bin/pm2 start startup.json --name API --no-daemon"
     environment:
-      - URL_MONGO=mongodb://api:docker1234@mongo
+      - URL_MONGO=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@mongo
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
+      - DB_NAME=${DB_NAME}
+      - BASE_URL=${BASE_URL}
+      - NODE_ENV=${NODE_ENV}
 
   mongo:
     image: mongo:4.0
@@ -20,5 +25,5 @@ services:
     ports:
       - "27017:27017"
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=api
-      - MONGO_INITDB_ROOT_PASSWORD=docker1234
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
