--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-loader": "^4.0.2",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.25.1",
+    "lorem-ipsum": "^2.0.4",
     "prettier": "^2.4.0",
     "typescript": "^4.4.3",
     "webpack": "^5.52.1",
