--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "watch": "webpack --config webpack.config.js --watch",
     "seed": "node ./build/seeder.bundle.js",
-    "build-dev": "webpack --config webpack.config.js"
+    "build-dev": "webpack --config webpack.config.js",
+    "populate-db": "node ./build/populateDb.bundle.js"
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
