--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "watch": "webpack --config webpack.config.js --watch",
     "seed": "node ./build/seeder.bundle.js",
     "build-dev": "webpack --config webpack.config.js",
-    "populate-db": "node ./build/populateDb.bundle.js",
-    "populate-db-2": "node ./build/populateDb2.bundle.js"
+    "import-database": "node ./build/databaseImporter.bundle.js"
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
