--- a/package.json
+++ b/package.json
@@ -9,28 +9,22 @@
     "import-database": "node ./build/databaseImporter.bundle.js"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.12.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "file-loader": "^6.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.14",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "~1.9.1",
-    "pm2": "^5.1.0",
-    "prop-types": "^15.7.2",
     "ra-data-json-server": "^3.16.3",
     "react": "^17.0.2",
     "react-admin": "^3.16.3",
-    "react-dom": "^17.0.2",
-    "twig": "^1.15.4",
-    "webpack-node-externals": "^3.0.0",
-    "webpack-shell-plugin-next": "^2.2.2"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@babel/polyfill": "^7.12.1",
     "@babel/cli": "^7.15.4",
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.6",
@@ -49,11 +43,15 @@
     "eslint-loader": "^4.0.2",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.25.1",
+    "file-loader": "^6.2.0",
     "lorem-ipsum": "^2.0.4",
+    "pm2": "^5.1.0",
     "prettier": "^2.4.0",
+    "prop-types": "^15.7.2",
     "typescript": "^4.4.3",
     "webpack": "^5.52.1",
     "webpack-cli": "^4.8.0",
+    "webpack-node-externals": "^3.0.0",
     "webpack-notifier": "^1.13.0"
   }
 }
