--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "watch": "webpack --config webpack.config.js --watch",
     "seed": "node ./build/seeder.bundle.js",
     "build-dev": "webpack --config webpack.config.js",
-    "import-database": "node ./build/databaseImporter.bundle.js"
+    "import-database": "node ./build/databaseImporter.bundle.js",
+    "start": "./node_modules/.bin/pm2 start startup.json --name API --no-daemon"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
