--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "./node_modules/.bin/pm2 start startup.json --name API --no-daemon"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -24,9 +25,9 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@babel/polyfill": "^7.12.1",
     "@babel/cli": "^7.15.4",
     "@babel/core": "^7.15.5",
+    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
@@ -44,7 +45,6 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.25.1",
     "file-loader": "^6.2.0",
-    "lorem-ipsum": "^2.0.4",
     "pm2": "^5.1.0",
     "prettier": "^2.4.0",
     "prop-types": "^15.7.2",
