renommage fichiers et dossier

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "watch": "webpack --config webpack.config.js --watch",
     "build-dev": "webpack --config webpack.config.js",
-    "import-database": "node ./build/databaseImporter.bundle.js",
+    "import-database": "node ./build/importProcess.bundle.js",
     "start": "./node_modules/.bin/pm2 start startup.json --name API --no-daemon"
   },
   "dependencies": {
