--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "ra-data-json-server": "^3.16.3",
     "react": "^17.0.2",
     "react-admin": "^3.16.3",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.15.4",
